25) goahead: add band steering options.<br>
26) goahead: add contol dynamic adaptive LNA gain.<br>
27) goahead: add clamp and skip long range vga options for 7602/7612 modules (USB3/HDMI interference reduce).<br>
28) goahead: add support ap-only mode.<br>
29) configs: disable VGA for long distance clients and clamp VGA of -4dB for all per default for 7602/7612 modules.<br>
30) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
31) kernel: ralink_wifi: backport some fixes to MT7620 and MT7610 stable drivers.<br>
32) kernel: ralink_wifi: fix variables type used as irqlock flags (MT7620 and MT7610 stable drivers).<br>
33) kernel: ralink_wifi: mt76x2 driver add workaround for DEASSOC PSM bug.<br>
34) kernel: ralink_wifi: print PA/LNA modes to syslog (for easy fabric control).<br>
35) kernel: ralink_wifi: add mt7603 driver support.<br>
36) kernel: ralink_wifi: mt76x3: driver update to 4.1.0.0 pre version.<br>
37) kernel: ralink_wifi: mt76x3: fix build warnings.<br>
38) kernel: ralink_wifi: mt76x3: fix ate build and work.<br>
39) kernel: compiler-gcc: disable -ftracer for __noclone functions.<br>
40) kernel: mm: fix page_group_by_mobility_disabled breakage.<br>
41) kernel: ext4: fix NULL pointer dereference in ext4_mark_inode_dirty().<br>
42) kernel: usb: option: add D-Link DWM-221 B1 device id.<br>
43) kernel: usb: cdc_mbim: apply NDP to end quirk to all Huawei devices.<br>
44) kernel: usb: cdc-acm: more sanity checking.<br>
45) kernel: net: ipv6: count in extension headers in skb->network_header.<br>
46) kernel: net: xfrm: fix crash observed during device unregistration and decryption.<br>
47) kernel: net: ethtool: fix phy adress get from user.<br>
48) kernel: net: fix net_gso_ok for new GSO types.<br>
49) kernel: net: netfilter: x_tables: fix unconditional helper.<br>
50) kernel: net: netfilter: x_tables: make sure e->next_offset covers remaining blob size.<br>
51) kernel: net: validate variable length ll headers.<br>
<br>
<br>
<br>